--- a/Superheroes/Superheroes.csproj
+++ b/Superheroes/Superheroes.csproj
@@ -58,6 +58,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="VengadorConverter.cs" />
+    <Compile Include="XmenConverter.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
