--- a/Superheroes/Superheroes.csproj
+++ b/Superheroes/Superheroes.csproj
@@ -58,8 +58,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="VengadorConverter.cs" />
-    <Compile Include="XmenConverter.cs" />
+    <Compile Include="HeroGroupConverter.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
