--- a/Superheroes/Superheroes.csproj
+++ b/Superheroes/Superheroes.csproj
@@ -59,6 +59,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="HeroGroupConverter.cs" />
+    <Compile Include="VistaModelo\MainWindowVM.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -108,5 +109,6 @@
     <Resource Include="assets\avengers.png" />
     <Resource Include="assets\xmen.png" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
